--- a/plugins/_jquery/view/field/onetomany.field.html
+++ b/plugins/_jquery/view/field/onetomany.field.html
@@ -1,1 +1,3 @@
 {% extends 'field/manytomany.field.html' %}
+
+{% block relationship_data_attributes %}data-relationship-field-type="onetomany"{% endblock %}
