--- a/plugins/_jquery/view/field/onetoone.field.html
+++ b/plugins/_jquery/view/field/onetoone.field.html
@@ -1,1 +1,3 @@
 {% extends 'field/manytoone.field.html' %}
+
+{% block relationship_data_attributes %}data-relationship-field-type="onetoone"{% endblock %}
