--- a/plugins/_jquery/view/field/photos.field.html
+++ b/plugins/_jquery/view/field/photos.field.html
@@ -4,9 +4,9 @@
 <script>
 	ofw.ready(function(){
 		// Load stylesheets
-		ofw.loadCssStylesheet('system/css/ext/dropzone/basic.css');
-		ofw.loadCssStylesheet('system/css/ext/dropzone/dropzone.css');
-		ofw.loadCssStylesheet('system/css/ext/dropzone/outlast.css');
+		ofw.loadCss('system/css/ext/dropzone/basic.css');
+		ofw.loadCss('system/css/ext/dropzone/dropzone.css');
+		ofw.loadCss('system/css/ext/dropzone/outlast.css');
 
 		// Add data attr
 		ofw.addDataAttributeHandler('photo', 'system/js/data/field/', function(photo){
