Field types file and files upgraded to Dropzone.

--- a/app/view/admin/category/category_edit.html
+++ b/app/view/admin/category/category_edit.html
@@ -59,6 +59,13 @@
 							{% input category.photo object.data.photo %}
 						</div>
 					</div>
+					<div class="form-group">
+						<label class="col-sm-2 control-label">File</label>
+						<div class="col-sm-10">
+							{% input category.file object.data.file %}
+						</div>
+					</div>
+
 
 					{% block content_more_fields %}{% endblock content_more_fields %}
 				</div>
