Add categories and manytomany filters.

--- a/plugins/_jquery/view/field/manytomany.field.html
+++ b/plugins/_jquery/view/field/manytomany.field.html
@@ -1,5 +1,7 @@
 <!-- Load up my requirements -->
-{% lang 'system/fields' 'relationships' %}
+{% block lang %}
+	{% lang 'system/fields' 'relationships' %}
+{% endblock %}
 
 <script>
 	ofw.ready(function(){
