Remove empty field from filter for manytomany.

--- a/plugins/_jquery/view/field/manytomany.filter.html
+++ b/plugins/_jquery/view/field/manytomany.filter.html
@@ -4,3 +4,5 @@
 	{% lang 'system/fields' 'relationships' %}
 	{% lang 'system/filters' 'relationships' %}
 {% endblock %}
+
+{% block relationship_input %}{% endblock %}
