--- a/plugins/_jquery/view/field/text.field.html
+++ b/plugins/_jquery/view/field/text.field.html
@@ -1,1 +1,1 @@
-<input class='ofw-field-text form-control' type='text' id='{{field.id}}' data-model='{{field.class_name}}' name='{{field.name}}' value='{{field.value|escape}}'>
+<input class='ofw-field-text form-control' type='text' id='{{field.id}}' data-model='{{field.class_name}}' name='{{field.name}}' value='{{field.value|escape}}' {% if field.placeholder %}placeholder="{{field.placeholder|escape}}"{% endif %}>
