Upgrade medium editor.

--- a/plugins/_jquery/view/field/richtext.field.html
+++ b/plugins/_jquery/view/field/richtext.field.html
@@ -1,7 +1,7 @@
 {% lang 'system/fields' 'richtext' %}
 
 <!-- load up medium editor -->
-<link rel="stylesheet" href="{{baseurl}}system/css/ext/medium-editor/medium-editor.css">
+<link rel="stylesheet" href="{{baseurl}}system/css/ext/medium-editor/medium-editor.css?v2">
 <link rel="stylesheet" href="{{baseurl}}system/css/ext/medium-editor/themes/bootstrap.css">
 
 <style>
