--- a/site/css/ext/medium-editor/medium-editor.css
+++ b/site/css/ext/medium-editor/medium-editor.css
@@ -60,7 +60,7 @@
   word-break: break-all;
   word-wrap: break-word;
   visibility: hidden;
-  z-index: 2002; }
+  z-index: 2000; }
   .medium-editor-anchor-preview a {
     color: #fff;
     display: inline-block;
@@ -86,9 +86,19 @@
   .medium-editor-placeholder:after {
     content: attr(data-placeholder) !important;
     font-style: italic;
-    left: 0;
     position: absolute;
+    left: 0;
     top: 0;
+    white-space: pre;
+    padding: inherit;
+    margin: inherit; }
+
+.medium-editor-placeholder-relative {
+  position: relative; }
+  .medium-editor-placeholder-relative:after {
+    content: attr(data-placeholder) !important;
+    font-style: italic;
+    position: relative;
     white-space: pre;
     padding: inherit;
     margin: inherit; }
@@ -206,14 +216,15 @@
   content: "";
   display: table; }
 
-[data-medium-editor-element] img {
-  max-width: 100%; }
-
-[data-medium-editor-element] sub {
-  vertical-align: sub; }
-
-[data-medium-editor-element] sup {
-  vertical-align: super; }
+.medium-editor-element {
+  word-wrap: break-word;
+  min-height: 30px; }
+  .medium-editor-element img {
+    max-width: 100%; }
+  .medium-editor-element sub {
+    vertical-align: sub; }
+  .medium-editor-element sup {
+    vertical-align: super; }
 
 .medium-editor-hidden {
   display: none; }
