--- a/plugins/_jquery/view/field/richtext.field.html
+++ b/plugins/_jquery/view/field/richtext.field.html
@@ -18,7 +18,7 @@
 				buttons: ['bold', 'italic', 'underline', 'anchor', 'orderedlist', 'unorderedlist', 'h2', 'h3', 'quote', 'removeFormat']
 			},
 			placeholder: {
-				text: '{{#system_field_richtext_placeholder#}}',
+				text: '{{#system_field_richtext_placeholder#|escapejs}}',
 				hideOnClick: true
 			}
 		});
