--- a/plugins/_jquery/view/field/richtext.field.html
+++ b/plugins/_jquery/view/field/richtext.field.html
@@ -18,8 +18,19 @@
 				buttons: ['bold', 'italic', 'underline', 'anchor', 'orderedlist', 'unorderedlist', 'h2', 'h3', 'quote', 'removeFormat']
 			},
 			placeholder: {
-				text: '{{#system_field_richtext_placeholder#|escapejs}}',
+				text: '{{field.placeholder|escapejs}}',
 				hideOnClick: true
+			},
+			paste: {
+				forcePlainText: false,
+				cleanPastedHTML: true,
+				cleanReplacements: [],
+				cleanAttrs: ['class', 'style', 'dir', 'script', 'onclick', 'onload'],
+				cleanTags: ['meta', 'script'],
+				unwrapTags: []
+    		},
+			extensions: {
+				'imageDragging': {}
 			}
 		});
 		mediumEditors['{{field.uid}}'].subscribe('editableInput', function(){
