--- a/plugins/_jquery/view/field/textarea.field.html
+++ b/plugins/_jquery/view/field/textarea.field.html
@@ -1,1 +1,1 @@
-<textarea class='ofw-field-text form-control' id='{{field.id}}' name='{{field.name}}' {% if field.placeholder %}placeholder="{{field.placeholder|escape}}"{% endif %}>{{field.value|safe|escape:'htmlall'}}</textarea>
+<textarea data-event="trigger" data-event-trigger-minor="keyup" data-event-trigger-major="change" class='ofw-field-text form-control' id='{{field.id}}' name='{{field.name}}' {% if field.placeholder %}placeholder="{{field.placeholder|escape}}"{% endif %}>{{field.value|safe|escape:'htmlall'}}</textarea>
